#474 - UI improvements - Fix allele count bar height so that text isn’t overlapping for multi-allelics.  Increase font size for allele count text.

--- a/assets/css/sass/_tooltip.sass
+++ b/assets/css/sass/_tooltip.sass
@@ -56,7 +56,7 @@
   overflow-wrap: break-word
   float: left
   width: 180px
-  height: 25px
+  min-height: 25px
   
 
 .tooltip-zygosity
@@ -161,7 +161,7 @@ rect
 
 .tooltip-allele-count-bar
   text
-    font-size: 9px !important
+    font-size: 11px !important
     fill:  $text-color
 
 text
