--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -2086,7 +2086,7 @@ header {
   overflow-wrap: break-word;
   float: left;
   width: 180px;
-  height: 25px; }
+  min-height: 25px; }
 
 .tooltip-zygosity {
   float: left;
@@ -2173,7 +2173,7 @@ rect.other-count {
   fill: #848484 !important; }
 
 .tooltip-allele-count-bar text {
-  font-size: 9px !important;
+  font-size: 11px !important;
   fill: #717171; }
 
 text.alt-count {
